# neurips_2026

./: .gitignore  CLAUDE.md  LICENSE  README.md  analysis.py  configs.py  pyproject.toml  rebuild_latex.py  run.py  setup.py
agents/: README.md  _cartpole_cy.pyx  _pointmass_cy.pyx  adaptation.py  base.py  dynamics.py  history.py  lqr.py  mpc.py  mpc_python.py  mujoco_dynamics.py  rewards.py  sarsa.py  spline.py  utils.py
cluster/: README.md  run_cartpole_midswitch.sh  run_cartpole_summary.sh  run_figures.sh  run_humanoid_balance_summary.sh  run_humanoid_midswitch.sh  run_midswitch_videos.sh  run_walker_midswitch.sh  run_walker_summary.sh
depr/: manuscript_fig1.py
scripts/: probe_cartpole_issue80.py  probe_humanoid_balance_gravity_gap_issue134.py  probe_humanoid_balance_gravity_issue134.py  probe_humanoid_balance_issue134.py  probe_humanoid_stand.py  probe_humanoid_stand_cost_landscape.py  probe_humanoid_stand_issue108.py  probe_issue145_aggressive.py  probe_issue145_extend_r.py  probe_issue145_quadratic.py  probe_issue145_quadratic_reps.py  probe_issue145_render.py  probe_issue145_retune.py  probe_issue145_wider.py  probe_issue_106_adapter.py  probe_mjpc_sampler.py  probe_walker.py  probe_walker_HR_grid.py  probe_walker_issue88.py  probe_walker_issue88_phase2.py  probe_walker_mismatch.py  render_figures.py  render_humanoid_issue108_videos.py  render_midswitch_videos.py
simulations/: analyze_adapt_dynamics.py  dataio.py  diagnostics.py  preview_theory_sweep.py  simulate_LQR_mismatch_regions.py  simulation.py  sweep_cartpole_adaptive.py  sweep_cartpole_midswitch.py  (+16 more)
(+43 files in other folders)
